# faas-collections

./: .travis.yml  LICENSE  README.md  deploy.groovy  deploy.js  deploy.sh
.github/: update-forked-repo-deploy.yml
.github/workflows/: update-forked-repo-deploy.yml  update-forked-repo-golang-deploy.yml  update-forked-repo-rust-deploy.yml
housing-notify/: pom.xml  template.yml
housing-notify/src/main/java/com/huangyunkun/faas/: App.java
trigger-jitpack/: pom.xml  template.yml
trigger-jitpack/src/main/java/com/huangyunkun/faas/: App.java
update-forked-repo/: .gitignore  .snyk  index.js  package.json  template.yml
update-forked-repo-golang/: .fcignore  .gitignore  Makefile  template.yml
update-forked-repo-golang/.fun/tmp/deploy/: template.yml
update-forked-repo-golang/build-image/: Dockerfile
update-forked-repo-golang/code/: go.mod  go.sum  main.go
update-forked-repo-rust/: .gitignore  Makefile  template.yml
update-forked-repo-rust/code/: Cargo.toml
update-forked-repo-rust/code/src/: handler.rs  main.rs
