[package]
name = "code"
version = "0.1.0"
edition = "2018"


[dependencies]
tokio = { version = "1.12.0", features = ["full"] }
warp = "0.3.0"
log = "0.4"
pretty_env_logger = "0.4"
octocrab = { git = "https://github.com/htynkn/octocrab.git", branch = "feature/include-parent-in-repo" }
serde_json = "1.0.68"
